# cnc-quote

./: .dockerignore  .env.example  .env.marketplace.example  .eslintrc.js  .eslintrc.json  .eslintrc.mock-guard.cjs  .gitignore  ACCESS_CREDENTIALS.md  ADMIN_WORKCENTER_MOCK_AUDIT.md  AI_DFM_GUIDE.md  AI_ML_QUICKSTART.md  API_DEPLOYMENT_STATUS.md  Audited files.txt  CHANGELOG.md  CLEANUP_AND_DEVELOPMENT_ROADMAP.md  COMPREHENSIVE_ORGANIZATION_PLAN.md  DEMO-GUIDE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DFM-README.md  ENTERPRISE_PAGE_AUDIT.md  ERROR_RESOLUTION_COMPLETE.md  IMPLEMENTATION_PLAN.md  MODULE_WIRING_FINAL_STATUS.md  MODULE_WIRING_STATUS.md  ORGANIZATION_PLAN.md  PRODUCTION-DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY_FEATURES.md  PRODUCTION_STATUS.md  QA-README.md  QA_FIXES_SUMMARY.md  QUICK_COMMANDS.md  README.md  REAL_PRICING_IMPLEMENTATION.md  RENDER-DEPLOYMENT.md  STRIPE_WEBHOOK_FIX.md  TEAM-DEMO-READY.md  WORKSPACE_REORGANIZATION_ASSESSMENT.md  XOMETRY_PARITY_ROADMAP.md  (+40 more)
apps/cad-service/: .env  DFM_STEP4_README.md  Dockerfile  Dockerfile.render  cad_features.py  environment.yml  main.py  package.json  pyproject.toml  requirements.txt  start.sh  test_dfm_fix.py  test_service.py
apps/cad-service/app/: dfm_config.json  logging_config.py  main.py  models.py  otel.py
apps/cad-service/app/api/: conversion.py  manufacturability_scoring.py
apps/cad-service/app/extractors/: holes.py  min_wall.py  pockets.py
apps/cad-service/app/loaders/: step_loader.py  stl_loader.py
apps/cad-service/app/routers/: analyze.py  gltf.py  health.py
(+1850 files in other folders)
